Fixed image margin on mobile

--- a/WebDesign/final/style.css
+++ b/WebDesign/final/style.css
@@ -110,6 +110,7 @@ img.small {
     figure,
     img.small {
         width: 100%;
+        margin: 0;
         padding: 0;
         float: none;
     }
